--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@prisma/client": "^6.1.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.13",
